--- a/dbt_interview_project/models/interviews/_src_interviews_raw.yml
+++ b/dbt_interview_project/models/interviews/_src_interviews_raw.yml
@@ -2,7 +2,7 @@ sources:
   - name: interviews
     database: dbt_project_db
     schema: raw
-    description: A clone of a Snowflake interviews database
+    description: '{{ doc("interview_platform")}}'
     config:
       freshness:
         warn_after:
