Resolved DQ issues and modified tests on stage level

--- a/dbt_interview_project/models/staging/properties.yml
+++ b/dbt_interview_project/models/staging/properties.yml
@@ -19,7 +19,7 @@ models:
         tests:
           - accepted_values:
               arguments:
-                values: ['DRAFT', 'REQUESTED', 'IN_PROGRESS', 'PENING_FEEDBACK', 'CANCELLED', 'SCHEDULED', 'COMPLETED']
+                values: ['DRAFT', 'REQUESTED', 'IN_PROGRESS', 'PENDING_FEEDBACK', 'CANCELLED', 'SCHEDULED', 'COMPLETED']
   - name: stg_job_function
     description: '{{ doc("stg_job_function_desc")}}'
   - name: stg_employee
